tests/suite/snapshots/suite__analyze__clobber_across_div_mod-2.snap
---
source: tests/suite/analyze.rs
assertion_line: 184
expression: live_ranges
---
rsp              enter:
┊                  mov _x, 1
┊   _x             mov _y, 2
┊   ●   _y         mov rax, _x
┊   rax ┊          cqo
┊   ┊   ┊   rdx    idiv 1
┊   ┊   ┊   ┊      cqo
┊   ┊   ┊   ┊      idiv 10
┊   ┊   R   ┊      mov rax, _y
┊   ┊       ┊      jmp exit
┊   ┊       ┊    exit:
R   R       R      ret

